<resources>
    <string name="app_name">WeatherApp</string>
    <string name="logo">Погода в вашем городе</string>
    <string name="hint_user_field">Введите название города</string>
    <string name="main_button">Узнать погоду</string>
    <string name="no_users_input">Введите текст</string>
    <string name="button_2">Список городов</string>
    <string name="button_3">Избранное</string>
    <string name="logo_page2">Список городов</string>
    <string name="name_Moscow">Москва</string>
    <string name="name_Irkutsk">Иркутск</string>
    <string name="name_act_Moscow">Погода в Москве</string>
</resources>