<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:background="@color/colorPrimary">


    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/textcolor"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:inputType="text"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/text_color_hint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/logo"
        android:layout_marginTop="50sp"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="30sp" />

    <Button
        android:id="@+id/main_button"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:layout_below="@id/user_field"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="130sp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_button"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:layout_marginTop="50sp"
        android:textAlignment="center"
        android:textColor="@color/text_color_hint"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@id/main_button"
        android:layout_marginLeft="230sp"
        android:layout_marginTop="270sp"
        android:layout_marginRight="30sp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:onClick="StartNewPage"
        android:text="@string/button_2"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/button_3"
        android:layout_marginTop="270sp"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="16sp"
        android:layout_below="@id/main_button"
        android:layout_marginRight="230sp"
        android:layout_marginLeft="30sp"
        android:backgroundTint="@color/blue" />





</RelativeLayout>